# WingCStruct

./: CMakeLists.txt  README.md  WingCStruct.json  WingCStruct_zh_CN.ts  ctypeparser.cpp  ctypeparser.h  defines.h  wingcstruct.cpp  wingcstruct.h
.github/workflows/: qt-build-release-linux.yml  qt-build-release-win.yml  qt-build-test.yml  reademe-contributors.yml
